Traefik/traefik-dashboard-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
  - port: 8000
    name: "web"
    targetPort: web
    protocol: TCP
  - port: 8443
    name: "websecure"
    targetPort: websecure
    protocol: TCP
  - port: 9000
    name: "traefik"
    targetPort: traefik
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  name: traefik
spec:
  controller: traefik.io/ingress-controller
---
