Traefik/traefik-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-kube-system
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 10
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9100"
      labels:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/instance: traefik-kube-system
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
      - image: "traefik:v3.7.13"
        imagePullPolicy: IfNotPresent
        name: traefik
        ports:
        - name: "metrics"
          containerPort: 9100
          protocol: "TCP"
        - name: "traefik"
          containerPort: 9000
          protocol: "TCP"
        - name: "web"
          containerPort: 8000
          protocol: "TCP"
        - name: "websecure"
          containerPort: 8443
          protocol: "TCP"
        readinessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        args:
        - "--api.insecure"
        - "--api.dashboard=true"
        - "--global.checknewversion"
        - "--global.sendanonymoususage"
        - "--ping=true"
        - "--ping.entrypoint=web"
        - "--entrypoints.metrics.address=:9100/tcp"
        - "--entrypoints.traefik.address=:9000/tcp"
        - "--entrypoints.web.address=:8000/tcp"
        - "--entrypoints.websecure.address=:8443/tcp"
        - "--entrypoints.websecure.http.tls=true"
        - "--metrics.prometheus=true"
        - "--metrics.prometheus.entrypoint=metrics"
        - "--providers.kubernetescrd"
        - "--providers.kubernetesingress"
        - "--accesslog"
        - "--accesslog.fields.defaultmode=keep"
        - "--accesslog.fields.names.ClientUsername=keep"
        - "--accesslog.fields.headers.defaultmode=keep"
        - "--accesslog.fields.headers.names.User-Agent=keep"
        - "--accesslog.fields.headers.names.Authorization=drop"
        - "--log"
        - "--entrypoints.web.forwardedheaders.insecure=true"
        - "--entrypoints.websecure.forwardedheaders.insecure=true"
        - "--log.level=ERROR"
        - "--accessLog.filePath=/var/log/traefik/access.log"
        - "--providers.kubernetesingress.ingressendpoint.ip=127.0.0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
  - port: 8000
    name: "web"
    targetPort: web
    protocol: TCP
  - port: 8443
    name: "websecure"
    targetPort: websecure
    protocol: TCP
  - port: 9000
    name: "traefik"
    targetPort: traefik
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  name: traefik
spec:
  controller: traefik.io/ingress-controller
